Better spacing and layout bug fixes

--- a/src/components/ExerciseList/ExerciseList.module.css
+++ b/src/components/ExerciseList/ExerciseList.module.css
@@ -11,6 +11,10 @@
   grid-column: 1 / -1;
 }
 
+.grid > span {
+  grid-column: 1 / -1;
+}
+
 .card {
   padding: 1rem;
 
